--- a/checkmate/templates/register.html
+++ b/checkmate/templates/register.html
@@ -1,6 +1,9 @@
 <h3>회원가입</h3>
 <form action="" method="post">
     {% csrf_token %}
+    프로필 사진: <input type="file" name="image">
+    닉네임: <input type="text" name="" maxlength='5' placeholder="최대 5글자">
+    <!-- 미디어로 받기 -->
     아이디: <input type="text" name="user-id">
     비밀번호: <input type="password" name="user-password">
     비밀번호 확인: <input type="password" name="check-password">
@@ -14,6 +17,7 @@
         <option value="KOR">대한민국</option>
         <option value="CHN">중국</option>
     </select>
+    
 
     <button type="submit">Sign Up</button>
 
