--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -16,8 +16,14 @@
         </div>
         <a href="">룸메 찾기</a>
         <a href="">정보 공유</a>
+        
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">로그아웃</a>
         <a href="">내정보</a>
-        <a href="">로그인</a>
+        {% endif %}
+        {% if not user.is_authenticated %}
+        <a href="{% url 'login' %}">로그인</a>
+        {% endif %}
     </nav>
     <div class="container">
         <div class="content-top">
