--- a/checkmate/templates/select.html
+++ b/checkmate/templates/select.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="select.css">
     <title>내 정보 입력 페이지</title>
 </head>
 <body>
     <!-- 네비바 없음 -->
-    <h1 class="title">내 정보 입력하기</h1>
+    <h1 class="top title">내 정보 입력하기</h1>
     <!-- 진행바 -->
     <div class="progress">
         <div class="background-bar">
@@ -17,7 +18,7 @@
             </div>
         </div>
     </div>
-    <h3>다음은 필수로 답해주셔야하는 문항들입니다.</h3>
+    <h3>*다음은 필수로 답해주셔야하는 문항들입니다.</h3>
     <!-- 문답 -->
     <div class="container">
         <div class="question grade">
@@ -39,11 +40,11 @@
             <h2 class="title">몇 동 룸메이트를 구하시나요?</h1>
             <div class="answer">
                 <input type="radio" id="dormitory-10" name="dormitory-number" value="10"><label for="dormitory-10">10동</label>
-                <input type="radio" id="dormitory-8" name="dormitory-number" value="10"><label for="dormitory-10">8동</label>
-                <input type="radio" id="dormitory-6" name="dormitory-number" value="10"><label for="dormitory-10">6동</label>
-                <input type="radio" id="dormitory-3" name="dormitory-number" value="10"><label for="dormitory-10">3동</label>
-                <input type="radio" id="dormitory-2" name="dormitory-number" value="10"><label for="dormitory-10">2동</label>
-                <input type="radio" id="dormitory-1" name="dormitory-number" value="10"><label for="dormitory-10">1동</label>
+                <input type="radio" id="dormitory-8" name="dormitory-number" value="10"><label for="dormitory-8">8동</label>
+                <input type="radio" id="dormitory-6" name="dormitory-number" value="10"><label for="dormitory-6">6동</label>
+                <input type="radio" id="dormitory-3" name="dormitory-number" value="10"><label for="dormitory-3">3동</label>
+                <input type="radio" id="dormitory-2" name="dormitory-number" value="10"><label for="dormitory-2">2동</label>
+                <input type="radio" id="dormitory-1" name="dormitory-number" value="10"><label for="dormitory-1">1동</label>
             </div>
         </div>
         <div class="question dormitory-date">
@@ -136,7 +137,7 @@
             </div>
         </div>
         <!-- 선택요소 -->
-        <h3>다음부터는 꼭 답하지 않아도 되는 선택 문항입니다.</h3>
+        <h3>*다음부터는 꼭 답하지 않아도 되는 선택 문항입니다.</h3>
         <div class="question share">
             <h2 class="title">생필품을 룸메와 같이 쓰나요?</h1>
             <div class="answer">
