--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,19 +1,20 @@
 <h3>회원가입</h3>
-<form action="" method="post">
+<form action="" method="POST">
     {% csrf_token %}
-    아이디: <input type="text" name="user-id">
-    비밀번호: <input type="password" name="user-password">
-    비밀번호 확인: <input type="password" name="check-password">
-    이름: <input type="text">
+    아이디: <input type="text" name="user_id">
+    비밀번호: <input type="password" name="user_password">
+    비밀번호 확인: <input type="password" name="user_password_check">
+    이름: <input type="text" name='user_name'>
     성별: 
-    <input type="radio" name="gender" value="man">남자
-    <input type="radio" name="gender" value="woman">여자
+    <input type="radio" name="user_gender" value="man">남자
+    <input type="radio" name="user_gender" value="woman">여자
     국적: 
-    <select name="nation">
+    <select name="user_nation">
         <option value="">선택해주세요.</option>
         <option value="KOR">대한민국</option>
         <option value="CHN">중국</option>
     </select>
+    닉네임: <input type="text" name='user_nickname'>
 
     <button type="submit">Sign Up</button>
 
