--- a/checkmate/templates/select.html
+++ b/checkmate/templates/select.html
@@ -187,5 +187,7 @@
             </div>
         </div>
     </div>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="../../static/js/select.js"></script>
 </body>
 </html>
