--- a/checkmate/templates/mypageProfile.html
+++ b/checkmate/templates/mypageProfile.html
@@ -18,7 +18,7 @@
         비밀번호
         <input type="password" name="user_password" placeholder="현재 비밀번호">
         <input type="password" name="user_newpassword" placeholder="새 비밀번호">
-        <input type="password" name="check_password_check" placeholder="새 비밀번호 확인">
+        <input type="password" name="user_password_check" placeholder="새 비밀번호 확인">
 
         <button type="submit">저장</button>
 
