--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -7,14 +7,14 @@
     <a href="">내가 작성한 글</a>
 </div>
 <div>
-    <h3>스크랩</h3>
+    <h3>내가 작성한 글</h3>
     <button>수정</button>
     <div>
         <!-- span for문돌리기 -->
         <span>
             <input type="checkbox" name="" id="">
-            <p>기숙사 | 남 | 20세</p>
-            <p>안녕하세요 10동 룸메이트 구합니다. 저층 선호합니다.</p>
+            <p>제목</p>
+            <p>날짜</p>
         </span>
     </div>
     <div>
