질문 넘기기 js 적용

--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -14,6 +14,8 @@
         <div class="main-check">
             <img src="" alt="">
             <a href="">checkmate</a>
+            <!-- 나중에 삭제하겠습니다. -->
+            <a href="{% url 'survey' %}">내정보 입력</a>
         </div>
 
         <a href="">룸메 찾기</a>
