--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -34,7 +34,7 @@
                 <h1 class="title">나와 딱 맞는<br>룸메이트 찾기</h1>
                 <p class="detail">설명설명설명<br>설명설명설명</p>
             </div>
-            <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA3MTNfMTIz%2FMDAxNjI2MTcyMTc1MTM2.WhsuBW-XW8EznT2YUeeRwmfivozt9k-R1Y66CjF5eisg.1i2h2X0xtHsUcTx_Id78vudHP2aew0xue3g919atUQcg.JPEG.yhnmynm1019%2F1626172144366.jpg&type=sc960_832" alt="" width="100px" height="100px"> <!-- 메인화면 이미지 추가 -->
+            <img src="../../static/img/img_main.png" alt="메인페이지 이미지" width="440px" height="331px"> <!-- 메인화면 이미지 추가 -->
         </div>
         <div class="content-bottom">
             <div class="menu-1">
