--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -10,8 +10,8 @@
     <h3>LOGIN</h3>
     <form action="" method="post">
         {% csrf_token %}
-        ID <input name="user_id" type="text">
-        PASSWORD <input name="user_password" type="password">
+        ID <input name="username" type="text">
+        PASSWORD <input name="password" type="password">
         <a href="">아이디 / 비밀번호 찾기</a>
         <!-- maxlength='5' 비밀 번호 최대길이 추후에 추가 -->
         <button type="submit">Login</button>
