로그인/ 회원가입 구현완료 재스야 고생했다

--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -15,7 +15,8 @@
         <a href="">아이디 / 비밀번호 찾기</a>
         <!-- maxlength='5' 비밀 번호 최대길이 추후에 추가 -->
         <button type="submit">Login</button>
-        <button onclick="">Sign Up</button>
+        <a href="{% url 'register' %}">회원가입</a>
+        
     </form>
     
 </body>
