--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -5,6 +5,11 @@
     아이디: <input type="text" name="username">
     비밀번호: <input type="password" name="password1">
     비밀번호 확인: <input type="password" name="password2">
+    <!-- 비밀번호 조건
+    Your password can’t be too similar to your other personal information.
+    Your password must contain at least 8 characters.
+    Your password can’t be a commonly used password.
+    Your password can’t be entirely numeric. -->
     이름: <input type="text",name='user_name'>
     성별: 
     <input type="radio" name="user_gender" value="man">남자
