--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -19,5 +19,23 @@
         
     </form>
     
+    {% if check %}
+    <div>
+        <h1>카카오 로그아웃</h1>
+        <form action="/account/kakaoLogout" method="GET">
+            <input type="submit" value="카카오로그아웃 및 연결 끊기" />
+        </form>
+    </div>
+    {% else %}
+
+    <div>
+        <h1>카카오 로그인</h1>
+        <form action="/account/kakaoLoginLogic" method="GET">
+        <input type="submit" value="카카오로그인" />
+        </form>
+    </div>
+    {% endif %}
+
 </body>
 </html></html>
+
