--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -38,11 +38,17 @@
         <div class="right-menu">
             <a href="">룸메 찾기</a>
             <a href="">정보 공유</a>
-            {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">로그아웃</a>
+           
+            {% if check %}
+            <div>
+                <form action="/account/kakaoLogout" method="GET">
+                    <input type="submit" value="카카오로그아웃 및 연결 끊기" />
+                </form>
+            </div>
+            <a href="{% url 'kakaoLogout' %}">로그아웃</a>
             <a href="">내정보</a>
-            {% endif %}
-            {% if not user.is_authenticated %}
+            {% else %}
+            
             <a href="{% url 'login' %}">로그인</a>
             {% endif %}
         <div>
@@ -86,3 +92,4 @@
     </footer>
 </body>
 </html>
+
