필수선택 모델 완성

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -23,7 +23,7 @@
     <!-- 문답 -->
     <div class="container">
         <p class="previous">< 이전</p>
-        <div class="question-box">
+        <form action="" method="POST" class="question-box">
             <div class="question grade">
                 <h2 class="title">현재 몇학년인가요?</h1>
                 <div class="answer">
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="question toilet">
-                <h2 class="title">청소는 얼마나 자주 하나요?</h1>
+                <h2 class="title">화장실 청소는 얼마나 자주 하나요?</h1>
                 <div class="answer">
                     <input type="range" name="toilet">
                 </div>
@@ -189,7 +189,7 @@
                     <input type="radio" id="game-no" name="game"><label for="game-no">안 함</label>
                 </div>
             </div>
-        </div>
+        </form>
         <p class="next">다음 ></p>
     </div>
 
