--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -135,7 +135,7 @@
                 <h2 class="title">방안에서 음식을 먹나요?</h1>
                 <div class="answer">
                     <input type="radio" id="eat-yes" name="eat"><label for="eat-yes">식사도 방안에서</label>
-                    <input type="radio" id="eat-snack" name="eat"><label for="eat-snack">냄새안나는 음식만(간식)</label>
+                    <input type="radio" id="eat-snack" name="eat"><label for="eat-snack">냄새 안 나는 음식만(간식)</label>
                     <input type="radio" id="eat-no" name="eat"><label for="eat-no">나가서 먹음</label>
                 </div>
             </div>
@@ -179,13 +179,14 @@
                 <div class="answer">
                     <input type="radio" id="keyboard-loud" name="keyboard"><label for="keyboard-loud">타이핑&게임 자주함</label>
                     <input type="radio" id="keyboard-no" name="keyboard"><label for="keyboard-no">거의 안함</label>
-                    <input type="radio" id="keyboard-noise" name="keyboard"><label for="keyboard-noise">저소음 키보드 사용중</label>
+                    <input type="checkbox" id="keyboard-noise" name="keyboard-checkbox"><label for="keyboard-noise">저소음 키보드 사용중</label>
                 </div>
             </div>
             <div class="question game">
                 <h2 class="title">게임을 하시나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="game-yes" name="game"><label for="game-yes">자주 함</label>
+                    <input type="radio" id="game-yes" name="game"><label for="game-yes">자주</label>
+                    <input type="radio" id="game-sometimes" name="game"><label for="game-sometimes">가끔</label>
                     <input type="radio" id="game-no" name="game"><label for="game-no">안 함</label>
                 </div>
             </div>
