--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <div class="mypage_nav">
     <h3>마이페이지</h3>
     <!-- border-left 색상 바꾸기 (클릭 모션) -->
@@ -11,11 +15,11 @@
     <button>수정</button>
     <div>
         <!-- span for문돌리기 -->
-        <span>
+        <div>
             <input type="checkbox" name="" id="">
             <p>기숙사 | 남 | 20세</p>
             <p>안녕하세요 10동 룸메이트 구합니다. 저층 선호합니다.</p>
-        </span>
+        </div>
     </div>
     <div>
         <ul class="pagination">
@@ -32,3 +36,26 @@
 
 
 </div>
+<button class="open" id="jsBtn">채팅열기</button>
+<div class="modal hidden" id="jsModal">
+    <button class="modal__closeBtn" id="jsCloseBtn">X</button>
+</div>
+
+
+<script>
+    const open = document.querySelector(".open");
+    const close = document.querySelector(".modal__closeBtn");
+    const modal = document.querySelector(".modal");
+
+    function init(){
+        open.addEventListener("click",function(){
+            modal.classList.remove("hidden");
+        });
+        close.addEventListener("click",function(){
+            modal.classList.add("hidden");
+        });
+    }
+
+    init();
+</script>
+{% endblock %}
