--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <div class="mypage_nav">
     <h3>마이페이지</h3>
     <!-- border-left 색상 바꾸기 (클릭 모션) -->
@@ -32,3 +35,26 @@
 
 
 </div>
+<button class="open" id="jsBtn">채팅열기</button>
+<div class="modal hidden" id="jsModal">
+    <button class="modal__closeBtn" id="jsCloseBtn">X</button>
+</div>
+
+
+<script>
+    const open = document.querySelector(".open");
+    const close = document.querySelector(".modal__closeBtn");
+    const modal = document.querySelector(".modal");
+
+    function init(){
+        open.addEventListener("click",function(){
+            modal.classList.remove("hidden");
+        });
+        close.addEventListener("click",function(){
+            modal.classList.add("hidden");
+        });
+    }
+
+    init();
+</script>
+{% endblock %}
