--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-
-
 {% block content %}
+
+{% load static %}
 <div class="container">
         <div class="content-top">
             <div class="text">
