--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -15,26 +15,16 @@
         <a href="">아이디 / 비밀번호 찾기</a>
         <!-- maxlength='5' 비밀 번호 최대길이 추후에 추가 -->
         <button type="submit">Login</button>
-        <a href="{% url 'register' %}">회원가입</a>
+        <!--<a href="{% url 'register' %}">회원가입</a> -->
         
     </form>
-    
-    {% if check %}
-    <div>
-        <h1>카카오 로그아웃</h1>
-        <form action="/account/kakaoLogout" method="GET">
-            <input type="submit" value="카카오로그아웃 및 연결 끊기" />
-        </form>
-    </div>
-    {% else %}
 
     <div>
-        <h1>카카오 로그인</h1>
         <form action="/account/kakaoLoginLogic" method="GET">
-        <input type="submit" value="카카오로그인" />
+        <input type="submit" value="카카오회원가입" />
         </form>
     </div>
-    {% endif %}
+
 
 </body>
 </html></html>
