--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
 <div class="container">
@@ -8,7 +8,8 @@
                 <h1 class="title">나와 딱 맞는<br>룸메이트 찾기</h1>
                 <p class="detail">설명설명설명<br>설명설명설명</p>
             </div>
-            <img src="{% static 'img/img_main.png' %}" alt="메인페이지 이미지" width="440px" height="331px"> <!-- 메인화면 이미지 추가 -->
+            <!--  -->
+            
         </div>
         <div class="content-bottom">
             <div class="menu-1">
