--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/survey.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/survey.css' %}"> -->
     <title>내 정보 입력 페이지</title>
 </head>
 <body>
@@ -66,6 +66,8 @@
                     <span>~</span>
                     <select name="dormitory-year-end">
                         <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2024</option>
                     </select>
                     <select name="dormitory-semester-end">
                         <option value="1">1학기</option>
@@ -78,66 +80,68 @@
             <div class="question relationship">
                 <h2 class="title">룸메와 어떤 관계였으면 좋겠나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="friendly" name="relationship" value="친하게"><label for="friendly">친하게</label>
-                    <input type="radio" id="business" name="relationship" value="인사만"><label for="business">인사만</label>
+                    <input type="radio" id="friendly" name="relationship" value="0"><label for="friendly">친하게</label>
+                    <input type="radio" id="business" name="relationship" value="1"><label for="business">인사만</label>
                 </div>
             </div>
             <div class="question time">
                 <h2 class="title">몇시에 자서 몇시에 일어나나요?</h1>
                 <div class="answer">
-                    <input type="time" id="wakeup" name="time"><label for="wakeup">에 일어나서</label>
-                    <input type="time" id="bedtime" name="time"><label for="betime">에 잡니다</label>
+                    <input type="time" id="wakeup" name="wakeup-time"><label for="wakeup">에 일어나서</label>
+                    <input type="time" id="bedtime" name="bed-time"><label for="betime">에 잡니다</label>
                 </div>
             </div>
             <div class="question smoke">
                 <h2 class="title">흡연을 하나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="nonsmoker" name="smoke"><label for="nonsmoker">비흡연자</label>
-                    <input type="radio" id="smoker" name="smoke"><label for="smoker">흡연자</label>
+                    <input type="radio" id="nonsmoker" name="smoke" value="0"><label for="nonsmoker">비흡연자</label>
+                    <input type="radio" id="smoker" name="smoke" value="1"><label for="smoker">흡연자</label>
                 </div>
             </div>
             <div class="question cleaning">
-                <h2 class="title">청소는 얼마나 자주 하나요?</h1>
+                <h2 class="title">한달에 청소는 얼마나 하나요?</h1>
                 <div class="answer">
-                    <input type="range" name="cleaning">
+                    <!-- 0:안함, 1:한달한번, 2:격주1회, 3:주1회 4:주3~4회, 5:매일 =>js로 표시 예정 -->
+                    <input type="range" name="cleaning" min="0" max="5">
                 </div>
             </div>
             <div class="question sleeping-habits">
                 <h2 class="title">잠버릇이 있나요?</h1>
                 <div class="answer">
-                    <input type="checkbox" id="snoring" name="sleeping-habits"><label for="snoring">코골이</label>
-                    <input type="checkbox" id="grinding-teeth" name="sleeping-habits"><label for="grinding-teeth">이갈이</label>
-                    <label for="other">기타</label><input type="text" id="other" name="sleeping-habits">
+                    <input type="checkbox" id="snoring" name="sleeping-habits-snoring" value="True"><label for="snoring">코골이</label>
+                    <input type="checkbox" id="grinding-teeth" name="sleeping-habits-teeth" value="True"><label for="grinding-teeth">이갈이</label>
+                    <label for="other">기타</label><input type="text" id="other" name="sleeping-habits-other">
+                    <input type="checkbox" id="nothing" name="sleeping-habits-nothing"><label for="nothing">없음</label>
                 </div>
             </div>
             <div class="question invite-friends">
-                <h2 class="title">방에 친구를 데려오나요?</h1>
+                <h2 class="title">방에 친구를 데려오나요?</h2>
                 <div class="answer">
-                    <input type="radio" id="invite-friends-yes" name="invite-friends"><label for="invite-friends-yes">예</label>
-                    <input type="radio" id="invite-friends-no" name="invite-friends"><label for="invite-friends-no">아니요</label>
+                    <input type="radio" id="invite-friends-yes" name="invite-friends" value="0"><label for="invite-friends-yes">예</label>
+                    <input type="radio" id="invite-friends-no" name="invite-friends" value="1"><label for="invite-friends-no">아니요</label>
                 </div>
             </div>
             <div class="question call">
                 <h2 class="title">방안에서 통화를 해도 괜찮나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="call-yes" name="call"><label for="call-yes">예</label>
-                    <input type="radio" id="call-no" name="call"><label for="call-no">아니요</label>
-                    <input type="radio" id="call-short" name="call"><label for="call-short">짧은통화만</label>
+                    <input type="radio" id="call-yes" name="call" value='0'><label for="call-yes">예</label>
+                    <input type="radio" id="call-no" name="call" value='1'><label for="call-no">아니요</label>
+                    <input type="radio" id="call-short" name="call" value='2'><label for="call-short">짧은통화만</label>
                 </div>
             </div>
             <div class="question earphones">
                 <h2 class="title">방안에서 이어폰을 사용하길 원하시나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="earphones-yes" name="earphones"><label for="earphones-yes">필수</label>
-                    <input type="radio" id="earphones-no" name="earphones"><label for="earphones-no">상관없음</label>
+                    <input type="radio" id="earphones-yes" name="earphones" value="True"><label for="earphones-yes">필수</label>
+                    <input type="radio" id="earphones-no" name="earphones" value="False"><label for="earphones-no">상관없음</label>
                 </div>
             </div>
             <div class="question eat">
                 <h2 class="title">방안에서 음식을 먹나요?</h1>
                 <div class="answer">
-                    <input type="radio" id="eat-yes" name="eat"><label for="eat-yes">식사도 방안에서</label>
-                    <input type="radio" id="eat-snack" name="eat"><label for="eat-snack">냄새 안 나는 음식만(간식)</label>
-                    <input type="radio" id="eat-no" name="eat"><label for="eat-no">나가서 먹음</label>
+                    <input type="radio" id="eat-yes" name="eat" value='0'><label for="eat-yes">식사도 방안에서</label>
+                    <input type="radio" id="eat-snack" name="eat" value='1'><label for="eat-snack">냄새 안 나는 음식만(간식)</label>
+                    <input type="radio" id="eat-no" name="eat" value='2'><label for="eat-no">나가서 먹음</label>
                 </div>
             </div>
             <!-- 선택요소 -->
@@ -198,6 +202,6 @@
 
     <!-- js -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script type="text/javascript" src="{% static 'js/survey.js' %}"></script>
+    <!-- <script type="text/javascript" src="{% static 'js/survey.js' %}"></script> -->
 </body>
 </html>
