--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="{% static 'css/survey.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/survey.css' %}">
     <title>내 정보 입력 페이지</title>
 </head>
 <body>
@@ -202,6 +202,6 @@
 
     <!-- js -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <!-- <script type="text/javascript" src="{% static 'js/survey.js' %}"></script> -->
+    <script type="text/javascript" src="{% static 'js/survey.js' %}"></script>
 </body>
 </html>
