--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHECKMATE</title>
+    {% block head %}
+        
+    {% endblock %}
 </head>
 <body>
     <!-- 네비바 -->
