--- a/checkmate/templates/community.html
+++ b/checkmate/templates/community.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <h3>정보 공유 게시판</h3>
@@ -33,7 +34,7 @@
         <li class="page-item"><a class="page-link" href="#">▶</a></li>
     </ul>
 </div>
-<button class="open" id="jsBtn">채팅열기</button>
+<img class="open" id="jsBtn" src="{% static 'img/chat_icon.png' %}" alt="">
 <div class="modal hidden" id="jsModal">
     <button class="modal__closeBtn" id="jsCloseBtn">X</button>
 </div>
