모델 수정(반려동물, mbti 항목 추가)

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -151,6 +151,14 @@
                     <input type="radio" id="eat-no" name="eat" value='2'><label for="eat-no">나가서 먹음</label>
                 </div>
             </div>
+            <div class="question animal">
+                <h2 class="title">방안에서 음식을 먹나요?</h1>
+                <div class="answer">
+                    <input type="radio" id="animal-dog" name="animal" value='0'><label for="animal-dog">강아지</label>
+                    <input type="radio" id="animal-cat" name="animal" value='1'><label for="aniaml-cat">고양이</label>
+                    <label>기타</label><input type="text" id="animal-other" name="animal-other">
+                </div>
+            </div>
             <!-- 선택요소 -->
             <h3>*다음부터는 꼭 답하지 않아도 되는 선택 문항입니다.</h3>
             <div class="question share">
@@ -200,6 +208,12 @@
                     <input type="radio" id="game-yes" name="game" value="0"><label for="game-yes">자주</label>
                     <input type="radio" id="game-sometimes" name="game" value="1"><label for="game-sometimes">가끔</label>
                     <input type="radio" id="game-no" name="game" value="2"><label for="game-no">안 함</label>
+                </div>
+            </div>
+            <div class="question mbti">
+                <h2 class="title">MBTI를 입력해주세요!</h1>
+                <div class="answer">
+                    <input type="text" name="mbti">
                 </div>
             </div>
             <input type="submit">
