카카오 로그인 완료

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -23,6 +23,7 @@
     </select>
     <!-- 프로필 사진: <input type="file" name="image"> -->
     닉네임: <input type="text" name="user_nickname" maxlength='8' placeholder="최대 8글자">
+    <input type="hidden" name="kakao_id", value="{{ kakao_id }}">
 
     <button type="submit">Sign Up</button>
 
